# claude-design-mcp

./: .env.example  .gitignore  LICENSE  README.md  RELEASING.md  claude_desktop_config.example.json  install.ps1  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: README.md
notes/ultraplan-2026-05-10/: ship-claude-design-mcp.md
notes/ultraplan-2026-05-10/context/: decisions.md  design-md-section-mapping.md  open-questions.md  rubric-snapshot-v0.2.0-rc1.md  rubric-snapshot.md
notes/ultraplan-2026-05-10/research/: 01-codebase-recon.md  02-release-path.md  03-positioning.md  04-framework-docs.md  05-feedback-loops.md
scripts/: dogfood_smoke.py  redesign_1930.py  redesign_1930_v3.py  render_1930_built.py  smoke_mcp_stdio.py
src/claude_design/: __init__.py  __main__.py  design_md.py  designer.py  models.py  preview.py  prompts.py  renderer.py  server.py  studio.py
tests/: conftest.py  test_clamp_repr_fallback.py  test_components_page.py  test_csp_and_clamp.py  test_csp_foreign_content.py  test_csp_injection_bypass.py  test_csp_nonce.py  test_demo_cli.py  test_design_md_emit.py  test_design_md_tool.py  test_designer_oauth.py  test_designer_parsing.py  test_env_loading.py  test_export_paths.py  test_model_validators.py  test_models.py  test_oauth_env_scrub.py  test_oauth_readiness.py  test_optimizations.py  test_preview.py  test_renderer_security.py  test_studio.py  test_studio_dir_resolution.py  test_studio_pragmas_and_symlinks.py  test_tool_wrapper.py  test_variants_resilience.py
