[build-system]
requires = ["hatchling>=1.29,<2"]
build-backend = "hatchling.build"

[project]
name = "claude-design-mcp"
version = "0.2.0"
description = "MCP server that routes design requests through Claude's frontier visual-design capability with versioning, variants, rendering, and design-system extraction."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "claude", "design", "anthropic", "ui", "html", "css", "studio"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "mcp>=1.23,<2",
  "claude-agent-sdk>=0.1.80,<0.2",
  "pydantic>=2.5,<3",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
render = ["playwright>=1.59,<2"]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/Evilander/claude-design-mcp"
Issues = "https://github.com/Evilander/claude-design-mcp/issues"
Source = "https://github.com/Evilander/claude-design-mcp"

[project.scripts]
claude-design-mcp = "claude_design.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_design"]

[tool.ruff]
line-length = 100
target-version = "py310"
